# avhook-cs2

./: .gitignore  CMakeLists.txt  CMakePresets.json
avh/: CMakeLists.txt  main.cpp
avh/hacks/hooks/: CMakeLists.txt  Hooker.cpp  Hooker.h
avh/overlay/: CMakeLists.txt  Overlay.cpp  Overlay.h
avh/overlay/windows/: BaseWindow.cpp  BaseWindow.h  IBaseDrawable.h  SettingsWindow.cpp  SettingsWindow.h
extlibs/imgui/: CMakeLists.txt
extlibs/imgui/src/: imgui_draw.cpp
libs/: CMakeLists.txt
libs/cs2sdk/: CMakeLists.txt
libs/cs2sdk/include/cs2sdk/: BaseObject.h  EntityList.h  Player.h  ViewProjectionMatrix.h
libs/cs2sdk/src/: CMakeLists.txt  EntityList.cpp  Player.cpp  ViewProjectionMatrix.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: ImVec3.h  matrix.h
libs/math/src/: CMakeLists.txt  ImVec3.cpp  matrix.cpp
libs/sigscanner/: CMakeLists.txt
libs/sigscanner/include/sigscanner/: ModuleScanner.h  SignatureScanner.h
libs/sigscanner/src/: CMakeLists.txt  SignatureScanner.cpp
